changed header to head partial. Makes more sense. fixed bench to Bench issue. Added league password. Unsecure on purpose

--- a/views/football/league/create.ejs
+++ b/views/football/league/create.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include ../../partials/_header %>
+    <% include ../../partials/_head %>
     <title>Create League</title>
   </head>
 
@@ -15,6 +15,10 @@
         <div class='form-group'>
           <label for='name'>League Name:</label>
           <input type='text' class='form-control' id='name' name='name'>
+        </div>
+        <div class='form-group'>
+          <label for='password'>League Password:</label>
+          <input type='text' class='form-control' id='password' name='password'>
         </div>
         <div class='form-group'>
           <label for='size'>Number of Teams:
