--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/_header %>
+<% include ./partials/_head %>
 
 <body>
     <h1>LOGIN</h1>
@@ -13,6 +13,6 @@
         </div>
         <div>
             <button type='submit' value='Send' id='submit' class='form-control'>submit</button>
-        </div>  
+        </div>
     </form>
 </body>
