--- a/views/football/draft/create.ejs
+++ b/views/football/draft/create.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include ../../partials/_header %>
+    <% include ../../partials/_head %>
     <title>Create New Draft %></title>
   </head>
 
-  <body> 
+  <body>
     <div class="container">
       <h1>Create Draft for League <%= (leagueData.name) %></h1>
     </div>
