--- a/views/football/draft/view.ejs
+++ b/views/football/draft/view.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include ../../partials/_header %>
+    <% include ../../partials/_head %>
     <title>Draft %></title>
   </head>
 
   <body>
-    
+
     <div class="container">
       <h1>Draft</h1>
     </div>
