--- a/views/football/index.ejs
+++ b/views/football/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include ../partials/_header %>
+    <% include ../partials/_head %>
     <title>Football Home</title>
   </head>
 
