--- a/views/football/league/index.ejs
+++ b/views/football/league/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include ../../partials/_header %>
+    <% include ../../partials/_head %>
     <title>League List</title>
   </head>
