--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -17,6 +17,8 @@
 <!--Stylesheet-->
 <link rel="stylesheet" href="/styles/main.css" type="text/css" />
 
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
