added top nav for site. Created basic links. CLeaned up login and register forms

--- a/views/football/draft/create.ejs
+++ b/views/football/draft/create.ejs
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <% include ../../partials/_nav %>
     <div class="container">
       <h1>Create Draft for League <%= (leagueData.name) %></h1>
     </div>
