--- a/views/football/index.ejs
+++ b/views/football/index.ejs
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <% include ../partials/nav %>
+    <% include ../partials/_nav %>
     <div class="container">
       <h1>Football Home</h1>
     </div>
