--- a/views/football/league/index.ejs
+++ b/views/football/league/index.ejs
@@ -4,3 +4,8 @@
     <% include ../../partials/_head %>
     <title>League List</title>
   </head>
+  <body>
+    <% include ../../partials/_nav %>
+
+  </body>
+</html>
