--- a/views/football/league/view.ejs
+++ b/views/football/league/view.ejs
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <% include ../../partials/_nav %>
 
     <div class="container center_div">
       <h1><%= (leagueData.name) %> - League <%= (leagueData.id) %></h1>
