--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,23 @@
 <% include ./partials/_head %>
 
 <body>
-    <h1>LOGIN</h1>
+  <% include partials/_nav %>
+
+
+  <div class='container'>
+    <h1>Login</h1>
     <form action='/login' method='POST'>
-        <div class='form-group'>
-            <label for='username'>userame</label>
-            <input type='text' name='username' class='form-control' id='username'>
-        </div>
-        <div class='form-group'>
-            <label for='password'>password</label>
-            <input type='password' name='password' class='form-control' id='password'>
-        </div>
-        <div>
-            <button type='submit' value='Send' id='submit' class='form-control'>submit</button>
-        </div>
+      <div class='form-group'>
+        <label for='username'>Userame</label>
+        <input type='text' name='username' class='form-control' id='username'>
+      </div>
+      <div class='form-group'>
+        <label for='password'>Password</label>
+        <input type='password' name='password' class='form-control' id='password'>
+      </div>
+      <div>
+        <button type='submit' class='btn btn-default'>Submit</button>
+      </div>
     </form>
+  </div>
 </body>
