--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -14,12 +14,12 @@
         <li><a href="/football/league/create">Create League</a></li>
         <li><a href="/football">Find League</a></li>
       </ul>
-      <% if (user) { %>
+      <% if (username) { %>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <span class="glyphicon glyphicon-user"></span>
-              <strong><%= user %></strong>
+              <strong><%= username %></strong>
               <span class="glyphicon glyphicon-chevron-down"></span>
             </a>
               <ul class="dropdown-menu">
@@ -28,7 +28,7 @@
                     <div class="row">
 
                         <div class="col-lg-8">
-                          <p class="text-left"><strong><%= user %></strong></p>
+                          <p class="text-left"><strong><%= username %></strong></p>
                           <p class="text-left small">**EMAIL**</p>
                           <p class="text-left">
                             <a href="#" class="btn btn-primary btn-block btn-sm">Account Settings</a>
