removed style from gitignore. added route for claiming a team. WIll need to make view.

--- a/views/football/league/claim.ejs
+++ b/views/football/league/claim.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include partials/_head %>
+    <% include ../../partials/_head %>
     <title>Login</title>
   </head>
 
   <body>
-    <% include partials/_nav %>
+    <% include ../../partials/_nav %>
 
     <div class='container'>
-      <h1>Login</h1>
+      <h1>League Password</h1>
       <form action='/login' method='POST'>
         <div class='form-group'>
           <label for='username'>Userame</label>
