--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,26 +1,33 @@
-<% include ./partials/_head %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <% include partials/_head %>
+    <title>Login</title>
+  </head>
 
-<body>
+  <body>
     <% include partials/_nav %>
-    <div class='container'>
-      <h1>Register</h1>
-      <form action='/register' method='POST'>
-          <div class='form-group'>
-              <label for='username'>Userame</label>
-              <input type='text' name='username' class='form-control' id='username'>
-          </div>
-          <div class='form-group'>
-              <label for='email'>Email</label>
-              <input type='text' name='email' class='form-control' id='email'>
-          </div>
-          <div class='form-group'>
-              <label for='password'>Password</label>
-              <input type='password' name='password' class='form-control' id='password'>
-          </div>
-          <div>
-            <button type='submit' class='btn btn-default'>Submit</button>
-          </div>
-      </form>
-    </div>
-</body>
+
+      <div class='container'>
+        <h1>Register</h1>
+        <form action='/register' method='POST'>
+            <div class='form-group'>
+                <label for='username'>Userame</label>
+                <input type='text' name='username' class='form-control' id='username'>
+            </div>
+            <div class='form-group'>
+                <label for='email'>Email</label>
+                <input type='text' name='email' class='form-control' id='email'>
+            </div>
+            <div class='form-group'>
+                <label for='password'>Password</label>
+                <input type='password' name='password' class='form-control' id='password'>
+            </div>
+            <div>
+              <button type='submit' class='btn btn-default'>Submit</button>
+            </div>
+        </form>
+      </div>
+  </body>
+</html>
 
