changed migrations to optimize DB. Added tables to league to better show data. Created function to pull all draft for a league. Added function to add a user to a specific team

--- a/views/football/draft/create.ejs
+++ b/views/football/draft/create.ejs
@@ -32,8 +32,10 @@
         </div>
         <div class='form-group'>
           <div class="radio">
-            <label class="radio-inline"><input type="radio" name="rookie" value="False">Startup</label>
-            <label class="radio-inline"><input type="radio" name="rookie" value="True">Rookie</label>
+            <label class="radio-inline"><input type="radio" name="pool" value="Veteran">Veteran Only</label>
+            <label class="radio-inline"><input type="radio" name="pool" value="Rookie">Rookie Only</label>
+            <label class="radio-inline"><input type="radio" name="pool" value="VeteranPick">Veterans and Picks</label>
+            <label class="radio-inline"><input type="radio" name="pool" value="VeteranRookie">Veterans and Rookies</label>
           </div>
         </div>
         <div class='form-group'>
