--- a/views/football/draft/create.ejs
+++ b/views/football/draft/create.ejs
@@ -41,55 +41,13 @@
         <div class='form-group'>
           <label class="text-inline">Number of Rounds:
             <select class="form-control" name="rounds">
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-              <option>6</option>
-              <option>7</option>
-              <option>8</option>
-              <option>9</option>
-              <option>10</option>
-              <option>11</option>
-              <option>12</option>
-              <option>13</option>
-              <option selected='selected'>14</option>
-              <option>15</option>
-              <option>16</option>
-              <option>17</option>
-              <option>18</option>
-              <option>19</option>
-              <option>20</option>
-              <option>21</option>
-              <option>22</option>
-              <option>23</option>
-              <option>24</option>
-              <option>25</option>
-              <option>26</option>
-              <option>27</option>
-              <option>28</option>
-              <option>29</option>
-              <option>30</option>
-              <option>31</option>
-              <option>32</option>
-              <option>33</option>
-              <option>34</option>
-              <option>35</option>
-              <option>36</option>
-              <option>37</option>
-              <option>38</option>
-              <option>39</option>
-              <option>40</option>
-              <option>41</option>
-              <option>42</option>
-              <option>43</option>
-              <option>44</option>
-              <option>45</option>
-              <option>46</option>
-              <option>47</option>
-              <option>48</option>
-              <option>49</option>
-              <option>50</option>
+              <% for (var i = 2; i <= 50; i++) { %>
+                <% if (i === 14) { %>
+                  <option selected='selected'><%= i %></option>
+                <% } else { %>
+                  <option><%= i %></option>
+                <% } %>
+              <% } %>
             </select>
           </label>
         </div>
