removed uneeded stuff from nav

--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -12,7 +12,6 @@
       <ul class="nav navbar-nav">
         <li><a href="/football">Football Home</a></li>
         <li><a href="/football/league/create">Create League</a></li>
-        <li><a href="/football">Find League</a></li>
       </ul>
       <% if (username) { %>
         <ul class="nav navbar-nav navbar-right">
@@ -23,22 +22,9 @@
               <span class="glyphicon glyphicon-chevron-down"></span>
             </a>
               <ul class="dropdown-menu">
-                <li>
-                  <div class="navbar-login">
-                    <div class="row">
-
-                        <div class="col-lg-8">
-                          <p class="text-left"><strong><%= username %></strong></p>
-                          <p class="text-left small">**EMAIL**</p>
-                          <p class="text-left">
-                            <a href="#" class="btn btn-primary btn-block btn-sm">Account Settings</a>
-                          </p>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="divider navbar-login-session-bg"></li>
-                <li><a href="#">My Account<span class="glyphicon glyphicon-th-list pull-right"></span></a></li>
+                <li><a href="#">My Leagues<span class="glyphicon glyphicon-th-list pull-right"></span></a></li>
+                <li class="divider"></li>
+                <li><a href="#">Account<span class="glyphicon glyphicon-cog pull-right"></span></a></li>
                 <li class="divider"></li>
                 <li><a href='/logout'>Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
               </ul>
