--- a/views/football/draft/create.ejs
+++ b/views/football/draft/create.ejs
@@ -7,52 +7,59 @@
 
   <body>
     <% include ../../partials/_nav %>
-    <div class="container">
-      <h1>Create Draft for League <%= (leagueData.name) %></h1>
-    </div>
     <div class='container'>
-      <form action='/football/league/<%= (leagueData.id) %>/draft/create' method='post'>
-        <h4 class="form-group">Draft Options:</h4>
-        <div class="form-group">
-          <div class="radio">
-            <label class="radio-inline startType"><input type="radio" name="start" value="DateTime">Start at Specific Time</label>
-            <label class="radio-inline startType"><input type="radio" name="start" value="Manual">Manual Start</label>
-          </div>
+      <div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div class="panel-heading">
+          <div class="panel-title">Create Draft</div>
         </div>
-        <div class="form-group hide" id="date">
-          <label for="keepers">Draft Starting Date and Time:
-            <input type='datetime-local' class='form-control' name='date'>
-          </label>
+        <div class="panel-heading">
+
+          <form action='/football/league/<%= (leagueData.id) %>/draft/create' method='post'>
+            <div class="form-group">
+            <label for="start">Start Type:</label>
+              <div class="radio">
+                <label class="radio-inline startType"><input type="radio" name="start" value="DateTime">Start at Specific Time</label>
+                <label class="radio-inline startType"><input type="radio" name="start" value="Manual">Manual Start</label>
+              </div>
+            </div>
+            <div class="form-group hide" id="date">
+              <label for="keepers">Date and Time:
+                <input type='datetime-local' class='form-control' name='date'>
+              </label>
+            </div>
+            <div class='form-group'>
+              <label for="start">Draft Type:</label>
+              <div class="radio">
+                <label class="radio-inline"><input type="radio" name="draftType" value="Snake">Snake</label>
+                <label class="radio-inline"><input type="radio" name="draftType" value="Standard">Standard</label>
+              </div>
+            </div>
+            <div class='form-group'>
+              <label for="start">Player Pool:</label>
+              <div class="radio">
+                <label class="radio-inline"><input type="radio" name="pool" value="Veteran">Veteran</label>
+                <label class="radio-inline"><input type="radio" name="pool" value="Rookie">Rookie</label>
+                <label class="radio-inline"><input type="radio" name="pool" value="VeteranPick">Veterans & Picks</label>
+                <label class="radio-inline"><input type="radio" name="pool" value="VeteranRookie">Veterans & Rookies</label>
+              </div>
+            </div>
+            <div class='form-group'>
+              <label class="text-inline">Number of Rounds:
+                <select class="form-control" name="rounds">
+                  <% for (var i = 2; i <= 50; i++) { %>
+                    <% if (i === 14) { %>
+                      <option selected='selected'><%= i %></option>
+                    <% } else { %>
+                      <option><%= i %></option>
+                    <% } %>
+                  <% } %>
+                </select>
+              </label>
+            </div>
+            <button type='submit' class='btn btn-default'>Submit</button>
+          </form>
         </div>
-        <div class='form-group'>
-          <div class="radio">
-            <label class="radio-inline"><input type="radio" name="draftType" value="Snake">Snake</label>
-            <label class="radio-inline"><input type="radio" name="draftType" value="Standard">Standard</label>
-          </div>
-        </div>
-        <div class='form-group'>
-          <div class="radio">
-            <label class="radio-inline"><input type="radio" name="pool" value="Veteran">Veteran Only</label>
-            <label class="radio-inline"><input type="radio" name="pool" value="Rookie">Rookie Only</label>
-            <label class="radio-inline"><input type="radio" name="pool" value="VeteranPick">Veterans and Picks</label>
-            <label class="radio-inline"><input type="radio" name="pool" value="VeteranRookie">Veterans and Rookies</label>
-          </div>
-        </div>
-        <div class='form-group'>
-          <label class="text-inline">Number of Rounds:
-            <select class="form-control" name="rounds">
-              <% for (var i = 2; i <= 50; i++) { %>
-                <% if (i === 14) { %>
-                  <option selected='selected'><%= i %></option>
-                <% } else { %>
-                  <option><%= i %></option>
-                <% } %>
-              <% } %>
-            </select>
-          </label>
-        </div>
-        <button type='submit' class='btn btn-default'>Submit</button>
-      </form>
+      </div>
     </div>
   </body>
 </html>
