changed form layout to use panels

--- a/views/football/draft/create.ejs
+++ b/views/football/draft/create.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <% include ../../partials/_head %>
-    <title>Create New Draft %></title>
+    <title>New Draft %></title>
   </head>
 
   <body>
