--- a/views/football/draft/view.ejs
+++ b/views/football/draft/view.ejs
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <% include ../../partials/_head %>
-    <title>Draft %></title>
+    <title>Draft</title>
   </head>
 
   <body>
