--- a/views/football/league/claim.ejs
+++ b/views/football/league/claim.ejs
@@ -2,24 +2,30 @@
 <html lang="en">
   <head>
     <% include ../../partials/_head %>
-    <title>Login</title>
+    <title>Claim Team</title>
   </head>
 
   <body>
     <% include ../../partials/_nav %>
 
     <div class='container'>
-      <h1>League Password</h1>
-      <p>Enter the league password provided by the league creator</p>
-      <form action='/football/league/<%= leagueID %>/claim/<%= teamID %>' method='POST'>
-        <div class='form-group'>
-          <label for='password'>League Password</label>
-          <input type='text' name='password' class='form-control' id='password'>
+      <div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div class="panel-heading">
+          <div class="panel-title">Claim Team</div>
         </div>
-        <div>
-          <button type='submit' class='btn btn-default'>Submit</button>
+        <div class="panel-heading">
+          <form action='/football/league/<%= leagueID %>/claim/<%= teamID %>' method='POST'>
+            <div class='form-group'>
+              <label for='password'>League Password</label>
+              <input type='text' name='password' class='form-control' id='password'>
+            <p>Enter the league password provided by the league creator</p>
+            </div>
+            <div>
+              <button type='submit' class='btn btn-default'>Submit</button>
+            </div>
+          </form>
         </div>
-      </form>
+      </div>
     </div>
   </body>
 </html>
