--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,20 +9,26 @@
     <% include partials/_nav %>
 
     <div class='container'>
-      <h1>Login</h1>
-      <form action='/login' method='POST'>
-        <div class='form-group'>
-          <label for='username'>Userame</label>
-          <input type='text' name='username' class='form-control' id='username'>
+      <div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div class="panel-heading">
+          <div class="panel-title">Login</div>
         </div>
-        <div class='form-group'>
-          <label for='password'>Password</label>
-          <input type='password' name='password' class='form-control' id='password'>
+        <div class="panel-heading">
+          <form action='/login' method='POST'>
+            <div class='form-group'>
+              <label for='username'>Userame</label>
+              <input type='text' name='username' class='form-control' id='username'>
+            </div>
+            <div class='form-group'>
+              <label for='password'>Password</label>
+              <input type='password' name='password' class='form-control' id='password'>
+            </div>
+            <div>
+              <button type='submit' class='btn btn-default'>Submit</button>
+            </div>
+          </form>
         </div>
-        <div>
-          <button type='submit' class='btn btn-default'>Submit</button>
-        </div>
-      </form>
+      </div>
     </div>
   </body>
 </html>
