changed routes to include userID (used for nav)

--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -22,7 +22,7 @@
               <span class="glyphicon glyphicon-chevron-down"></span>
             </a>
               <ul class="dropdown-menu">
-                <li><a href="#">My Leagues<span class="glyphicon glyphicon-th-list pull-right"></span></a></li>
+                <li><a href="/user/<%= userID %>">My Leagues<span class="glyphicon glyphicon-th-list pull-right"></span></a></li>
                 <li class="divider"></li>
                 <li><a href="#">Account<span class="glyphicon glyphicon-cog pull-right"></span></a></li>
                 <li class="divider"></li>
