added redirect if you try to access an accounts team list that isnt yours

--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <% include ../partials/_head %>
-    <title>Register</title>
+    <title><%= username %></title>
   </head>
 
   <body>
