--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -12,6 +12,9 @@
       <ul class="nav navbar-nav">
         <li><a href="/football">Football Home</a></li>
         <li><a href="/football/league/create">Create League</a></li>
+        <% if (username) { %>
+          <li><a href="/user/<%= userID %>">My Leagues</a></li>
+        <% } %>
       </ul>
       <% if (username) { %>
         <ul class="nav navbar-nav navbar-right">
@@ -22,8 +25,6 @@
               <span class="glyphicon glyphicon-chevron-down"></span>
             </a>
               <ul class="dropdown-menu">
-                <li><a href="/user/<%= userID %>">My Leagues<span class="glyphicon glyphicon-th-list pull-right"></span></a></li>
-                <li class="divider"></li>
                 <li><a href="#">Account<span class="glyphicon glyphicon-cog pull-right"></span></a></li>
                 <li class="divider"></li>
                 <li><a href='/logout'>Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
