--- a/views/football/draft/view.ejs
+++ b/views/football/draft/view.ejs
@@ -31,7 +31,7 @@
                     <p><%= picks[currentPosition].name %></p>
                     <p><%= picks[currentPosition].round %>.<%= picks[currentPosition].pick %></p>
                     <% if (i + 1 === teams.length && info.rounds === round) {  %>
-                      <span class='glyphicon glyphicon-thumbs-up'></span>
+                      <span></span>
                     <% } else if (i + 1 === teams.length) { %>
                       <span class='glyphicon glyphicon-arrow-down rotate-arrow'></span>
                     <% } else { %>
@@ -49,7 +49,7 @@
                       <p><%= picks[currentPosition].name %></p>
                       <p><%= picks[currentPosition].round %>.<%= picks[currentPosition].pick %></p>
                       <% if (i + 1 === teams.length && info.rounds === round) {  %>
-                        <span class='glyphicon glyphicon-thumbs-up'></span>
+                        <span></span>
                        <% } else if (i + 1 === teams.length) { %>
                         <span class='glyphicon glyphicon-arrow-down'></span>
                       <% } else { %>
@@ -66,7 +66,7 @@
                       <p><%= picks[backPick].name %></p>
                       <p><%= picks[backPick].round %>.<%= picks[backPick].pick %></p>
                       <% if (i === 0 && info.rounds === round) {  %>
-                        <span class='glyphicon glyphicon-thumbs-up'></span>
+                        <span></span>
                       <% } else if (i === 0 && info.rounds !== round) { %>
                         <span class='glyphicon glyphicon-arrow-down'></span>
                       <% } else { %>
