--- a/views/football/league/view.ejs
+++ b/views/football/league/view.ejs
@@ -103,6 +103,12 @@
               <td>Name</td>
               <td><%= (leagueData.name) %></td>
             </tr>
+            <% if (leagueData.commish_id == userID) { %>
+              <tr>
+                <td>Password</td>
+                <td><%= (leagueData.password) %></td>
+              </tr>
+            <% } %>
             <tr>
               <td>Size</td>
               <td><%= (leagueData.size) %></td>
