removed the ability to change league size

--- a/views/football/league/view.ejs
+++ b/views/football/league/view.ejs
@@ -110,7 +110,7 @@
               </tr>
             <% } %>
             <tr>
-              <td>Size</td>
+              <td>Teams</td>
               <td><%= (leagueData.size) %></td>
             </tr>
             <tr>
