added password confirmation field on register page

--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -27,8 +27,15 @@
                 <label for='password'>Password</label>
                 <input type='password' name='password' class='form-control' id='password'>
             </div>
+            <div class='form-group'>
+                <label for='confirmPassword'>Confrim Password</label>
+                <input type='password' name='confirmPassword' class='form-control' id='confirmPassword'>
+            </div>            
             <div>
               <button type='submit' class='btn btn-default'>Submit</button>
+            </div>
+            <div>
+              <p id="validate-status"></p>
             </div>
           </form>
         </div>
