--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -19,9 +19,16 @@
                 <label for='username'>Userame</label>
                 <input type='text' name='username' class='form-control' id='username'>
             </div>
+            <div>
+              <% if (!uniqueUsername) { %>
+                <p>Username Unavailable</p>
+              <% } else { %>
+                <p> </p>
+              <% } %>
+            </div>
             <div class='form-group'>
                 <label for='email'>Email</label>
-                <input type='text' name='email' class='form-control' id='email'>
+                <input type='email' name='email' class='form-control' id='email'>
             </div>
             <div class='form-group'>
                 <label for='password'>Password</label>
@@ -30,13 +37,13 @@
             <div class='form-group'>
                 <label for='confirmPassword'>Confrim Password</label>
                 <input type='password' name='confirmPassword' class='form-control' id='confirmPassword'>
-            </div>            
-            <div>
-              <button type='submit' class='btn btn-default'>Submit</button>
-            </div>
+            </div>  
             <div>
               <p id="validate-status"></p>
-            </div>
+            </div>          
+            <div>
+              <button type='submit' class='btn btn-default'>Submit</button>
+            </div>            
           </form>
         </div>
       </div>
