--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -16,12 +16,12 @@
         <div class="panel-heading">
           <form action='/register' method='POST'>
             <div class='form-group'>
-                <label for='username'>Userame</label>
+                <label for='username'>Username</label>
                 <input type='text' name='username' class='form-control' id='username'>
             </div>
             <div>
               <% if (!uniqueUsername) { %>
-                <p>Username Unavailable</p>
+                <p>Username unavailable</p>
               <% } else { %>
                 <p> </p>
               <% } %>
