--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -2,28 +2,30 @@
 <html lang="en">
   <head>
     <% include ../partials/_head %>
-    <title>Login</title>
+    <title>Account</title>
   </head>
 
   <body>
     <% include ../partials/_nav %>
-
     <div class='container'>
       <div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel-heading">
-          <div class="panel-title">Login</div>
+          <div class="panel-title">Suh, <%= username %></div>
         </div>
         <div class="panel-heading">
-          <form action='/login' method='POST'>
+          <form action='/account/email' method='POST'>
             <div class='form-group'>
-              <label for='username'>Username</label>
-              <input type='text' name='username' class='form-control' id='username'>
+              <label for='email'>Change Email</label>
+              <input type='email' name='email' class='form-control' id='email'>
+            <div>    
+              <button type='submit' class='btn btn-default'>Submit</button>
             </div>
+          </form>
+          <form action='/account/password' method='POST'>
             <div class='form-group'>
-              <label for='password'>Password</label>
+              <label for='password'>Change Password</label>
               <input type='password' name='password' class='form-control' id='password'>
-            </div>
-            <div>
+            <div>    
               <button type='submit' class='btn btn-default'>Submit</button>
             </div>
           </form>
@@ -31,4 +33,5 @@
       </div>
     </div>
   </body>
+
 </html>
