--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -10,25 +10,35 @@
     <div class='container'>
       <div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel-heading">
-          <div class="panel-title">Suh, <%= username %></div>
-        </div>
-        <div class="panel-heading">
-          <form action='/account/email' method='POST'>
-            <div class='form-group'>
-              <label for='email'>Change Email</label>
-              <input type='email' name='email' class='form-control' id='email'>
-            <div>    
-              <button type='submit' class='btn btn-default'>Submit</button>
-            </div>
-          </form>
-          <form action='/account/password' method='POST'>
-            <div class='form-group'>
-              <label for='password'>Change Password</label>
-              <input type='password' name='password' class='form-control' id='password'>
-            <div>    
-              <button type='submit' class='btn btn-default'>Submit</button>
-            </div>
-          </form>
+            <form action='/account/email' method='POST'>
+              <div class='form-group'>
+                <div class="panel-title">Change Your Email</div>
+                <label for='email'>New Email</label>
+                <input type='email' name='email' class='form-control' id='email'>
+              <div>    
+                <button type='submit' class='btn btn-default'>Submit</button>
+              </div>
+            </form>
+            <form action='/account/password' method='POST'>
+              <div class='form-group'>
+                <div class="panel-title">Change Your Password</div>
+                <label for='oldPassword'>Old Password</label>
+                <input type='password' name='oldPassword' class='form-control' id='oldPassword'>
+              <div>
+              <div class='form-group'>                
+                  <label for='password'>New Password</label>
+                  <input type='password' name='password' class='form-control' id='password'>
+              </div>
+              <div class='form-group'>
+                  <label for='confirmPassword'>Confrim New Password</label>
+                  <input type='password' name='confirmPassword' class='form-control' id='confirmPassword'>
+              </div>  
+              <div>
+                <p id="validate-status"></p>
+              </div>      
+                <button type='submit' class='btn btn-default'>Submit</button>
+              </div>
+            </form>
         </div>
       </div>
     </div>
