--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -25,6 +25,13 @@
               <div>    
                 <button type='submit' class='btn btn-default'>Submit</button>
               </div>
+              <div>
+              <% if (!uniqueUsername) { %>
+                <p>Username unavailable</p>
+              <% } else { %>
+                <p> </p>
+              <% } %>
+            </div>
             </form>
             <form action='/account/email' method='POST'>
               <div class='form-group'>
