added views and routes for rest of admin page. added admin nav.

--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -10,7 +10,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/football">Football Home</a></li>
+        <li><a href="/football">Football</a></li>
         <li><a href="/football/league/create">Create League</a></li>
         <% if (username) { %>
           <li><a href="/user/<%= userID %>">My Leagues</a></li>
