--- a/views/partials/_adminNav.ejs
+++ b/views/partials/_adminNav.ejs
@@ -10,6 +10,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
         <li><a href="/admin/players">Players</a></li>
         <li><a href="/admin/playeradp">Player ADP</a></li>
         <li><a href="/admin/new">New Admin</a></li>
@@ -18,4 +19,5 @@
         <li><a href="/admin/logout">Logout</a></li>
       </ul>
     </div>
+  </div>
 </div>
